v.0.0.1-preview.2
- Change: "FactBinder.as_int" can be null.

v.0.0.1-preview.1
- First preview release.