@@ -7,16 +7,19 @@ namespace Spprologa
 {
     public class Solutions : IEnumerable<Spprologa.Solution>
     {
-        private readonly IEnumerable<PrologEngine.ISolution> _Solutions;
+        private readonly IEnumerator<PrologEngine.ISolution> _Enumarator;
+
+        private readonly PrologEngine.ISolution? _FirstSolution;
 
         public Solutions(IEnumerable<PrologEngine.ISolution> solutions)
         {
-            _Solutions = solutions;
+            _Enumarator = solutions.Where(sln => sln.Solved).GetEnumerator();
+            if (_Enumarator.MoveNext()) _FirstSolution = _Enumarator.Current;
         }
 
         public override string? ToString()
         {
-            var solution = _Solutions.FirstOrDefault(sln => sln.Solved);
+            var solution = _FirstSolution;
             if (solution == null) return null;
 
             var varvalue = solution.VarValuesIterator.FirstOrDefault(v => v.DataType != "namedvar");
@@ -27,9 +30,11 @@ namespace Spprologa
 
         public IEnumerator<Solution> GetEnumerator()
         {
-            foreach (var solution in _Solutions.Where(sln => sln.Solved))
+            if (_FirstSolution == null) yield break;
+            yield return new Solution(_FirstSolution);
+            while (_Enumarator.MoveNext())
             {
-                yield return new Solution(solution);
+                yield return new Solution(_Enumarator.Current);
             }
         }
 
@@ -39,7 +44,7 @@ namespace Spprologa
         {
             get
             {
-                var solution = _Solutions.FirstOrDefault(sln => sln.Solved);
+                var solution = _FirstSolution;
                 if (solution == null) return null;
                 return Solution.GetVarVlaue(solution, varName);
             }
